# amr-wind

./: .buildinfo  .gitattributes  CMakeLists.txt  README.md  bibrefs.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: index.rst.txt  references.rst.txt
_sources/developer/: coding_guidelines.rst.txt  documentation.rst.txt  index.rst.txt  unit_testing.rst.txt
_sources/getting_started/: compiling.rst.txt  index.rst.txt
_sources/user/: abl_bndry_io.rst.txt  build.rst.txt  compression.rst.txt  faq.rst.txt  features.rst.txt  inputs.rst.txt  inputs_ABL.rst.txt  inputs_Actuator.rst.txt  inputs_Averaging.rst.txt  inputs_Boundary_conditions.rst.txt  inputs_MLMG.rst.txt  inputs_Momentum_Sources.rst.txt  inputs_Sampling.rst.txt  inputs_Subvolume.rst.txt  inputs_incflo.rst.txt  inputs_io.rst.txt  inputs_ocean_waves.rst.txt  inputs_post_processing.rst.txt  post_processing_examples.rst.txt  run.rst.txt  sampling.rst.txt  sampling_freesurfacesampler.rst.txt  tools.rst.txt
_sources/walkthrough/: calibration.rst.txt  index.rst.txt  noprecursorrans.rst.txt  precursor.rst.txt  rans.rst.txt  terrain.rst.txt  turbine.rst.txt
api_docs/: _a_b_l_boundary_plane_8_h_source.html  _a_b_l_field_init_8_h_source.html  _a_b_l_fill_inflow_8_h_source.html  _a_b_l_fill_m_p_l_8_h_source.html  _a_b_l_modulated_power_law_8_h_source.html  _a_b_l_stats_8cpp__incl.md5  _a_m_d_8_h__incl.map  _a_m_d_8_h__incl.md5  _a_m_d_8_h_source.html  _a_m_d_8cpp__incl.map  _a_m_d_8cpp__incl.md5  _adv_op___godunov_8_h__incl.map  _adv_op___godunov_8_h__incl.md5  _adv_op___m_o_l_8_h__incl.map  _adv_op___m_o_l_8_h__incl.md5  _b_c_interface_8_h_source.html  _b_c_ops_8_h__incl.map  _b_c_ops_8_h__incl.md5  _burggraf_lid_8cpp__incl.md5  _c_f_d_sim_8_h_source.html  _c_f_d_sim_8cpp__incl.map  _c_f_d_sim_8cpp__incl.md5  _channel_flow_8_h.html  _channel_flow_8_h__incl.map  _channel_flow_8_h__incl.md5  _channel_flow_8_h_source.html  _channel_flow_8cpp__incl.map  _channel_flow_8cpp__incl.md5  _coll_mgr_8_h__dep__incl.md5  _comp_r_h_s_ops_8_h__incl.map  _comp_r_h_s_ops_8_h__incl.md5  _const_transport_8_h__dep__incl.map  _const_transport_8_h__dep__incl.md5  _diffusion_ops_8_h__incl.map  _diffusion_ops_8_h__incl.md5  _diffusion_ops_8_h_source.html  _diffusion_ops_8cpp__incl.map  _diffusion_ops_8cpp__incl.md5  _direction_selector_8_h__dep__incl.map  _direction_selector_8_h__dep__incl.md5  (+396 more)
api_docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  (+163 more)
developer/: coding_guidelines.html  documentation.html  index.html  regression_testing.html  unit_testing.html  verification.html
docs/sphinx/: spelling-wordlist.txt
doxygen/html/: _a_b_l_8_h.html  _a_b_l_8_h__dep__incl.map  _a_b_l_8_h__dep__incl.md5  _a_b_l_8_h__incl.map  _a_b_l_8_h__incl.md5  _a_b_l_8_h_source.html  _a_b_l_8cpp.html  _a_b_l_8cpp__incl.map  _a_b_l_8cpp__incl.md5  _a_b_l_anelastic_8_h.html  _a_b_l_anelastic_8_h__dep__incl.map  _a_b_l_anelastic_8_h__dep__incl.md5  _a_b_l_anelastic_8_h__incl.map  _a_b_l_anelastic_8_h__incl.md5  _a_b_l_anelastic_8_h_source.html  _a_b_l_anelastic_8cpp.html  _a_b_l_anelastic_8cpp__incl.map  _a_b_l_anelastic_8cpp__incl.md5  _a_b_l_field_init_8_h.html  _a_b_l_field_init_8_h__dep__incl.map  _a_b_l_field_init_8_h__dep__incl.md5  _a_b_l_field_init_8_h__incl.map  _a_b_l_field_init_8_h__incl.md5  _a_b_l_field_init_8_h_source.html  _a_b_l_field_init_8cpp.html  _a_b_l_field_init_8cpp__incl.map  _a_b_l_field_init_8cpp__incl.md5  _a_b_l_field_init_file_8_h.html  _a_b_l_field_init_file_8_h__dep__incl.map  _a_b_l_field_init_file_8_h__dep__incl.md5  _a_b_l_field_init_file_8_h__incl.map  _a_b_l_field_init_file_8_h__incl.md5  _a_b_l_field_init_file_8_h_source.html  _a_b_l_field_init_file_8cpp.html  _a_b_l_field_init_file_8cpp__incl.map  _a_b_l_field_init_file_8cpp__incl.md5  _a_b_l_forcing_8_h.html  _a_b_l_forcing_8_h__incl.map  (+6366 more)
getting_started/: compiling.html  index.html
src/: incflo.cpp  main.cpp
src/utilities/: CMakeLists.txt  FieldPlaneAveraging.H  FieldPlaneAveraging.cpp  SecondMomentAveraging.H  SecondMomentAveraging.cpp  ThirdMomentAveraging.H  ThirdMomentAveraging.cpp
src/utilities/output_quantities/: CMakeLists.txt  Enstrophy.H  Enstrophy.cpp  FieldNorms.H  FieldNorms.cpp  KineticEnergy.H  KineticEnergy.cpp  WaveEnergy.H  WaveEnergy.cpp
src/utilities/sampling/: CMakeLists.txt  PlaneSampler.H  PlaneSampler.cpp  ProbeSampler.H  ProbeSampler.cpp  SamplerBase.H  Sampling.cpp
src/utilities/subvolume/: RectangularSubvolume.H  RectangularSubvolume.cpp  Subvolume.cpp  SubvolumeBase.H
test/: CMakeLists.txt
theory/: mapping.html  theory.html
user/: abl_bndry_io.html  alm_fllc.html  build.html  compression.html  faq.html  features.html  inputs.html  inputs_ABL.html  inputs_ABL_meso_forcing.html  inputs_AMR_Tagging.html  inputs_Actuator.html  inputs_Averaging.html  inputs_Boundary_conditions.html  inputs_ChannelBuilder.html  inputs_Enstrophy.html  inputs_FieldNorms.html  inputs_KineticEnergy.html  inputs_MLMG.html  inputs_Momentum_Sources.html  inputs_Sampling.html  inputs_Static_Refinement.html  inputs_Subvolume.html  inputs_SyntheticTurbulence.html  inputs_TKE_Sources.html  inputs_Temperature_Sources.html  inputs_amr.html  inputs_field_boundaries.html  inputs_forest.html  inputs_geometry.html  inputs_incflo.html  inputs_io.html  inputs_multiphase.html  inputs_ocean_waves.html  inputs_post_processing.html  inputs_tagging.html  inputs_time.html  inputs_transport.html  inputs_turbulence.html  post_processing_examples.html  run.html  (+4 more)
walkthrough/: calibration.html  index.html  noprecursorrans.html  precursor.html  rans.html  terrain.html  turbine.html
(+2808 files in other folders)
